@@ -1,0 +1,3 @@
+Improvements in subscript.c.
+
+Speeds up subscripting with a logical vector.
